--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 
   <dependencies>
     <dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.12</version>
-    <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
     </dependency>
-  </dependencies>
+</dependencies>
 </project>
